# GameWalkthroghtHelper

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  configure_ai_provider.bat  pyproject.toml  start_helper.bat
config/: default.yaml
docs/: architecture.md
scripts/: run.ps1  set-ai-provider.ps1
src/gamewalk_helper/: __init__.py  ai_advisor.py  cli.py  config.py  db.py  gui.py  hotkeys.py  models.py  pipeline.py  progress.py  runtime_control.py  scene.py  stabilizer.py  steam.py  voice.py  voice_input.py
src/gamewalk_helper/capture/: __init__.py  screen.py
src/gamewalk_helper/guides/: __init__.py  fetcher.py
src/gamewalk_helper/perception/: __init__.py  cv.py  ocr.py  roi.py
src/gamewalk_helper/ui/: overlay.py
tests/: test_ai_advisor.py  test_config_env.py  test_fetcher_sources.py  test_gui_helpers.py  test_hint_format.py  test_progress.py  test_roi.py  test_runtime_control.py  test_scene.py  test_stabilizer.py  test_steam.py  test_voice.py  test_voice_input.py
